# V.E.R.S.E

CLI/: dataset.csv  template.txt
CLI/src/: main.rs
Server/: app.py
Server/routes/: model.py
ZK-guest/: guest_elf  guest_id
ZK-guest/methods/guest/: Cargo.toml
ZK-guest/methods/guest/src/: main.rs
Zk-host/: proof.json
Zk-host/src/: main.rs
tree-onnx/host/: Cargo.toml
tree-onnx/host/src/: main.rs
tree-onnx/methods/guest/: Cargo.toml
tree-onnx/methods/guest/src/: main.rs
verifier/src/: main.rs
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  index.css
web/src/api/: model.ts
web/src/components/Navbar/: Bar.tsx  NavbarButton.tsx
web/src/pages/: Docs.tsx  Home.tsx  Models.tsx
