[package]
name = "guest_code_for_zk_proof"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "^3.0.3", default-features = false, features = ['std'] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"

[lib]
crate-type = ["lib"]
path = "src/main.rs"  